<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:gravity="center"
tools:context=".SoSEmergencyImplements.SosMainFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="start">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/subdirectory_arrow_left"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/sos_main_backbtn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/sospageimage"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/sos_main_warning"
        android:textAllCaps="true"
        android:textColor="@color/sos_background"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dm_sans_bold"
        android:gravity="center"
        android:text="@string/sos_main_instruction1"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/dm_sans_medium"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:text="@string/sos_main_instruction2"
        android:textColor="@color/sos_main_instruction2_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/sos_main_areyousure"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/request_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:text="@string/sos_main_request_btn"
        android:fontFamily="@font/dm_sans_bold"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sos_request_btn"
        android:padding="28dp" />

</LinearLayout>
</ScrollView>
